--- a/templates/login.html
+++ b/templates/login.html
@@ -10,12 +10,13 @@
 	{% endwith %}
 <div>
 <h1>progressApp.©</h1>
-
+<div class="login_container">
 	<form action="#" method="post" autocomplete="off" class="login_form">
 		<p><input type="text" name="nm" placeholder="username" class="user_field"/></p>
 		<p><input type="password" name="pw" placeholder="password" class="pw_field"></p>
 		<p><input type="submit" value="Log In" class="submit_button"/></p>
 	</form>
-	<a href=signup><input type=”button” value=signup></a>	
+	<a href=signup><input type=”button” value=signup class="signup_button"></a>	
+</div>
 </div>
 {% endblock %}
