--- a/templates/mynotes.html
+++ b/templates/mynotes.html
@@ -16,7 +16,9 @@
         </tr>
     {% endfor %}
     </table>
-    <a href=user><input type=”button” value=user></a> 
-    <a href=logout><input type=”button” value=logout></a> 
+</div>
+<div class="notes_logout">
+    <a href=user><input type=”button” value=user class="mynotes"></a> 
+    <a href=logout><input type=”button” value=logout class="logout"></a> 
 </div>
 {% endblock %}
