--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,6 +1,15 @@
-body {font-family: 'Roboto', sans-serif;
+html,body {
+    width: 100%;
+    height: 100%;
+}
+
+body {font-family: 'Source Sans Pro', sans-serif;
 background-color: rgb(184, 72, 72);
-color: black;}
+color: black;
+display: flex;
+justify-content: center;
+align-items: center;
+}
 
 form {display: flex;
 flex-direction: row;
@@ -8,7 +17,8 @@ flex-wrap: wrap;
 margin: 10px;
 justify-content: center;}
 
-p {margin: 0;}
+p {margin: 0;
+font-size: larger;}
 
 input {margin: 10;
 text-align: center;
@@ -20,6 +30,7 @@ div {display: flex;
 flex-direction: row;
 justify-content: space-around;
 margin: 20%;
+text-align: center;
 }
 
 h1 {display: flex;
@@ -44,5 +55,61 @@ height: 60;
 border-radius: 30px;
 border: transparent;}
 
+.login_container {
+display: flex;
+flex-direction: column;
+}
+
+.signup_button {width: 80;
+height: 40;
+box-shadow: 0px 15px 30px 0px rgba(0, 0, 0, 0.6);
+background-color: rgb(247, 146, 118);
+color: rgb(255, 255, 255);
+border: transparent;
+border-radius: 30px;
+justify-content: center;
+align-items: center;
+font-size: small;}
+
+.notes_logout {position: absolute;
+top: 0px;
+right: 0px;
+margin: 0px;
+margin-top: 10px;}
+
+.mynotes {width: 80;
+height: 40;
+background-color: transparent;
+color: rgb(255, 255, 255);
+border: transparent;
+border-radius: 30px;
+justify-content: center;
+align-items: center;
+font-size: small;
+box-shadow: 0px 15px 30px 0px rgba(0, 0, 0, 0.6);
+cursor: pointer;}
+
+.logout {width: 80;
+height: 40;
+background-color: transparent;
+color: rgb(255, 255, 255);
+border: transparent;
+border-radius: 30px;
+justify-content: center;
+align-items: center;
+font-size: small;
+box-shadow: 0px 15px 30px 0px rgba(0, 0, 0, 0.6);
+cursor: pointer;}
+
+.note_form {display: flex;
+flex-direction: column;
+}
+
+.note_field {width: 400;
+height: 100;
+border-bottom-left-radius: 20px;
+border-top-right-radius: 20px;
+border: transparent;
+}
 
 
