--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -37,7 +37,32 @@ h1 {display: flex;
 align-items: center;
 margin: 0;}
 
+select {height: 30px;
+width: 150px;
+border-radius: 20px;
+border: transparent;
+align-items: center;}
+
+.new_cat{width:150;
+height: 30;
+border-radius: 20px;
+border: transparent;
+align-items: center;
+font-size: small;
+position: relative;
+top: -78%;
+left: 30%;
+}
+
 .submit_button {width: 100;
+height: 60;
+box-shadow: 0px 15px 30px 0px rgba(0, 0, 0, 0.6);
+background-color: black;
+color: white;
+border: transparent;
+border-radius: 30px;}
+
+.submit_cat {width: 200;
 height: 60;
 box-shadow: 0px 15px 30px 0px rgba(0, 0, 0, 0.6);
 background-color: black;
@@ -103,6 +128,7 @@ cursor: pointer;}
 
 .note_form {display: flex;
 flex-direction: column;
+flex-wrap: wrap;
 }
 
 .note_field {width: 400;
