--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,6 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+	{% for message in messages %}
+		<p>{{ message }}</p>
+	{% endfor %}
+{% endif %}
+{% endwith %}
 <div>
 <h1>progressApp.©</h1>
 	<form action="#" method="post" autocomplete="off" class="login_form">
